# mlx-forge

./: CHANGELOG.md  CLAUDE_V1_ARCHIVE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  M13_COMPLETION_SUMMARY.md  M8_SELF_CONTAINED_MODEL_LOADING_DESIGN.md  PLAN_M40_M44.md  README.md  STATUS.md  V1_DESIGN.md  claude.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  test.yml
cortexlab/: __init__.py  manifest.py
cortexlab/cli/: data_cmd.py
cortexlab/inference/: engine.py  sampling.py
cortexlab/losses/: __init__.py
cortexlab/models/: memory.py  registry.py  resolve.py
cortexlab/models/_base/: __init__.py
cortexlab/models/architectures/: gemma.py
cortexlab/recipes/: __init__.py  auto_config.py
cortexlab/studio/: server.py
cortexlab/studio/api/: models.py
cortexlab/studio/services/: dataset_service.py  memory_service.py  model_library_service.py  queue_service.py  recipe_service.py  training_service.py
data/: train.jsonl  valid.jsonl
docs/: architecture.md  cli-reference.md  config-reference.md  index.md  installation.md  openai-api.md  quickstart.md  studio.md
examples/: alpaca_finetune.md  alpaca_qwen3.yaml
lmforge/: __init__.py  config.py  manifest.py
lmforge/adapters/: lora.py  targeting.py
lmforge/cli/: data_cmd.py  generate_cmd.py  main.py  prepare_cmd.py  studio_cmd.py  train_cmd.py
lmforge/data/: backend.py  batching.py  catalog.py  converter.py  formats.py  packing.py  preprocessing.py  registry.py  validate.py
lmforge/inference/: __init__.py  cache.py  engine.py  sampling.py
lmforge/losses/: __init__.py  dpo.py  sft.py
lmforge/models/: loader.py  memory.py  quantize.py  registry.py
lmforge/models/_base/: __init__.py  activations.py  args.py  attention.py  rope.py
lmforge/models/architectures/: __init__.py  gemma.py  llama.py  phi3.py  phi4.py  qwen2.py  qwen3.py  qwen3_5.py
lmforge/recipes/: __init__.py  auto_config.py  registry.py
lmforge/recipes/built_in/: chat_sft.yaml  instruction_sft.yaml  preference_dpo.yaml  writing_style.yaml
lmforge/studio/: __init__.py  server.py
lmforge/studio/api/: __init__.py  config_schema.py  data_library.py  datasets.py  inference.py  memory.py  models.py  queue.py  recipes.py  runs.py  (+1 more)
lmforge/trainer/: checkpoint.py  dpo_trainer.py  trainer.py
mlx_forge/: __init__.py  config.py  forge.py  manifest.py
mlx_forge/adapters/: dora.py  fuse.py  lora.py  targeting.py
mlx_forge/cli/: alias_cmd.py  export_cmd.py  forge_cmd.py  generate_cmd.py  main.py  serve_cmd.py
mlx_forge/data/: batching.py  formats.py  hf_loader.py  preprocessing.py  streaming.py
mlx_forge/export/: __init__.py  gguf_constants.py  gguf_writer.py  quantize.py  weight_mapping.py
mlx_forge/hub/: __init__.py  upload.py
mlx_forge/inference/: cache.py  constrained.py  encoder.py  engine.py  fim.py  logprobs.py  metrics.py  prompt_cache.py  rotating_cache.py  sampling.py  speculative.py  stop_conditions.py  thinking.py
mlx_forge/losses/: __init__.py  grpo.py  mlm.py  preference.py  seq2seq.py
mlx_forge/models/: loader.py  memory.py  registry.py
mlx_forge/serving/: __init__.py  app.py  cache_manager.py  model_manager.py  model_pool.py  openai_types.py  request_queue.py  routes.py  tool_parser.py
mlx_forge/studio/: security.py  server.py
mlx_forge/trainer/: callbacks.py  checkpoint.py  grpo_trainer.py  kto_trainer.py  mlm_trainer.py  orpo_trainer.py  reward.py  seq2seq_trainer.py  simpo_trainer.py  trainer.py
mlx_forge/vision/: __init__.py  data.py  inference.py  trainer.py
scripts/: download_hf_dataset.py
studio-frontend/: package-lock.json  package.json
studio-frontend/src/: App.tsx  index.css  main.tsx
tests/: conftest.py  test_adapters.py  test_backend.py  test_catalog.py  test_config.py  test_data.py  test_data_validate.py  test_integration.py  test_labels.py  test_m10_performance.py  test_m11_studio.py  test_m13_integration.py  test_m14_export.py  test_m15_security.py  test_m16_queue.py  test_m17_sampling.py  test_m19_polish.py  test_m20_openai_server.py  test_m21_hub_upload.py  test_m22_gguf.py  test_m23_dora.py  test_m24_hf_datasets.py  test_m26_grpo.py  test_m27_full_ft.py  test_m28_architectures.py  test_m29_preference.py  test_m30_gguf_quant.py  test_m31_speculative.py  test_m32_vision_inference.py  test_m33_streaming.py  test_m34_vision_training.py  test_m35_encoder.py  test_m36_enc_dec.py  test_m37_inference.py  test_m38_server.py  test_m39_structured.py  test_m40_wiring.py  test_m41_lifecycle.py  test_m42_context.py  test_m43_features.py  (+10 more)
(+89 files in other folders)
