[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-forge"
version = "0.2.10"
description = "Fine-tune, experiment with, and run LLMs locally on your Mac"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jiekai Wang" },
]
keywords = ["mlx", "lora", "fine-tuning", "apple-silicon", "llm", "qlora", "dpo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.18.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "transformers>=4.35.0",
    "jinja2>=3.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "datasets>=2.16.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
wandb = [
    "wandb>=0.16.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.4.0",
]
all = [
    "mlx-forge[wandb]",
]

[project.urls]
Repository = "https://github.com/moyuan5989/mlx-forge"
Issues = "https://github.com/moyuan5989/mlx-forge/issues"

[project.scripts]
mlx-forge = "mlx_forge.cli.main:main"

[tool.setuptools.packages.find]
include = ["mlx_forge*"]

[tool.setuptools.package-data]
mlx_forge = [
    "studio/frontend/**/*",
    "recipes/built_in/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
